# coursework

./: .coverage  .flake8  .gitignore  README.md  env.sample  pyproject.toml  reports.json  servies.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
